syntax = "proto3";

package cosmoeth.cosmoeth;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmoeth/cosmoeth/params.proto";

option go_package = "CosmoEth/x/cosmoeth/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/CosmoEth/cosmoeth/params";
  
  }
  
  // Queries a list of StateValue items.
  rpc StateValue (QueryStateValueRequest) returns (QueryStateValueResponse) {
    option (google.api.http).get = "/CosmoEth/cosmoeth/state_value/{address}/{slot}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryStateValueRequest {
  string address = 1;
  string slot    = 2;
}

message QueryStateValueResponse {
  string value = 1;
  uint64 height = 2;
}

